--- a/Zaikaa/food/templates/allorders.html
+++ b/Zaikaa/food/templates/allorders.html
@@ -1,16 +1,18 @@
-<!DOCTYPE html>
 {% load static %}
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All Orders</title>
     <link rel="stylesheet" type="text/css" href="{% static 'css/allorders.css' %}" />
-    <script src="{% static 'js/allorders.js' %}" defer></script>
 </head>
 <body>
-
+   
     <div class="container">
+        <a href="{% url 'admin_panel' %}">
+            <button class="btn-admin-panel">Go to Admin Panel</button>
+        </a>
         <h1>All Orders</h1>
         <table>
             <thead>
