--- a/Zaikaa/food/templates/home.html
+++ b/Zaikaa/food/templates/home.html
@@ -8,6 +8,8 @@
     <title>Home - Zaikaa</title>
     <link rel="stylesheet" type="text/css" href="{% static 'css/home.css' %}" />
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet"/>
+    <!-- <script src="{% static 'js/home.js' %}" defer></script> -->
+
 </head>
 <body>
       <!-- Popup Message -->
@@ -106,7 +108,7 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/gsap.min.js"></script>
 <script>
-document.addEventListener("DOMContentLoaded", function () {
+    document.addEventListener("DOMContentLoaded", function () {
     const ease = "power4.inOut";
 
         // Page Load Animation (Hides Loader after Animation)
