--- a/Zaikaa/staticfiles/css/allorders.css
+++ b/Zaikaa/staticfiles/css/allorders.css
@@ -19,6 +19,9 @@ body {
   border-radius: 12px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
+.container a {
+  text-decoration: none;
+}
 
 h1 {
   text-align: center;
@@ -68,6 +71,28 @@ td[colspan="7"] {
   color: #7f8c8d;
 }
 
+.btn-admin-panel {
+  padding: 12px 20px;
+  background-color: #2c3e50;
+  color: white;
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+  border-radius: 4px;
+  text-transform: uppercase;
+  font-weight: bold;
+  margin-bottom: 20px;
+  display: block;
+  width: 100%;
+  text-align: center;
+  transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+
+.btn-admin-panel:hover {
+  background-color: #0056b3;
+  transform: scale(1.02);
+}
 /* Mobile responsiveness */
 @media (max-width: 768px) {
   .container {
